# serac

./: .gitlab-ci.yml  .readthedocs.yml  CMakeLists.txt  README.md  astyle.cfg
cmake/: SeracMacros.cmake  (+1 more)
src/: CMakeLists.txt
src/coefficients/: CMakeLists.txt
src/docs/sphinx/: conf.py  index.rst
src/docs/sphinx/user_guide/: index.rst  input_file_reference.rst  simple_conduction_tutorial.rst
src/drivers/: CMakeLists.txt
src/integrators/: CMakeLists.txt
src/serac/infrastructure/: profiling.cpp  profiling.hpp
src/serac/physics/utilities/: CMakeLists.txt  finite_element_state.cpp
src/serac/physics/utilities/functional/tests/: tensor_unit_tests_cuda.cu
src/serac/physics/utilities/variational_form/: CMakeLists.txt  finite_element.hpp  integral.hpp  polynomials.hpp  quadrature.hpp  tensor.hpp  thermal_comparison.cpp  weak_form.hpp
src/serac/physics/utilities/variational_form/benchmark/: bench_weak_form.cpp  benchmark.hpp
src/serac/physics/utilities/variational_form/detail/: hexahedron_L2.inl  hexahedron_hcurl.inl  meta.h  metaprogramming.hpp  quadrilateral_L2.inl  quadrilateral_h1.inl  quadrilateral_hcurl.inl  segment_L2.inl  segment_hcurl.inl
src/serac/physics/utilities/variational_form/ignore/: thermal_comparison.cpp
src/serac/physics/utilities/variational_form/tests/: tensor_unit_tests.cpp  thermal_comparison_weak_form.cpp  tuple_arithmetic_unit_tests.cpp  weak_form_comparison_L2.cpp  weak_form_comparisons.cpp
src/serac/physics/utilities/variational_form/tests/performance/: diffusion_performance_test.cpp
src/solvers/: CMakeLists.txt
(+27 files in other folders)
